--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,10 @@
     {% endif %}
 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-	<link id="wsite-base-style" rel="stylesheet" type="text/css" href="https://cdn2.editmysite.com/css/sites.css?buildTime=1234" />
-	<link rel="stylesheet" type="text/css" href="https://cdn2.editmysite.com/css/old/fancybox.css?1234" />
-	<link rel="stylesheet" type="text/css" href="files/main_style.css?1539102259" title="wsite-theme-css" />
+	
+	<link rel="stylesheet" type="text/css" href="assets/css/editmysite.com.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/fancybox.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/main_style.css" title="wsite-theme-css" />
 	<link href='https://fonts.googleapis.com/css?family=Play:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 
 	<style type='text/css'>
@@ -20,7 +20,57 @@
 			background-image: url(uploads/header_images/ASH_black_top.jpg) !important;
 			background-position: 0 0 !important;
 		}
+
+		.event {
+			display: block;
+			margin: 4pt auto;
+			width: 75%;
+			border: solid black 2px;
+			padding: 6pt;
+			text-align: left;
+			overflow: auto;
+		}
+
+		.eventHead {
+			display: flex;
+			width: 100%;
+		}
+		.eventTitle {
+			margin: 0;
+			color: white;
+			font-size: 16pt;
+			padding-left: 4pt;
+			padding-right: 20pt;
+			display: inline-block;
+		}
+		.eventDetails {
+			display: inline-block;
+			margin-left: auto;
+		}
+		.eventDetailsRow {
+			display: block;
+			font-weight: bold;
+			color: white;
+		}
+		.eventDetailsRowValue {
+			font-weight: normal;
+			color: white;
+		}
+
+		.eventBody {
+			display: block;
+			padding-left: 20pt;
+		}
+		.eventDescription {
+			color: lightgray !important;
+		}
 	</style>
+
+	{% if page.scripts %}
+		{% for script in page.scripts %}
+			<script src="assets/js/{{ script }}"></script>
+		{% endfor %}
+	{% endif %}
 </head>
 
 <body class="tall-header-page wsite-theme-dark  wsite-page-contact">
