Removed Jacob from the footer again (change was lost in the recent pull request merge).

--- a/_layouts/addedCSS.html
+++ b/_layouts/addedCSS.html
@@ -153,7 +153,7 @@
 					university or its officers. The University of Texas at Dallas is an Equal Opportunity/Affirmative Action University. </h5>
 				</div>
 				
-				<p style="text-align:center"><a href="https://github.com/utdash/ASH-Website">Domain maintained by <strong>Jacob Camacho and Joshua Baker</strong></a> | Website designed by <a href="https://www.linkedin.com/in/priscilla-arinze/"><strong>Priscilla Arinze</strong></a></p>
+				<p style="text-align:center"><a href="https://github.com/utdash/ASH-Website">Domain maintained by <strong>Joshua Baker</strong></a> | Website designed by <a href="https://www.linkedin.com/in/priscilla-arinze/"><strong>Priscilla Arinze</strong></a></p>
 				
 			</div>
 			<script>
