Added permalinks to the html files so that the URLs are cleaner.
Rescued serveLocal.sh from git history oblivion.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,38 +81,28 @@
 		<div id="nav-wrap">
 			<div id="page">
 				<div id="topnav">
-					<a href="index.html" class="wsite-menu-item">
+					<a href="/" class="wsite-menu-item">
 								<img id="nav-icon" src="uploads/nav-icon.png" alt="ASH - Atheists Skeptics And Humanists"/>
 					</a>
 					<ul class="nav-links">
-						<li  {% if page.url == "/about-us.html" %} id="active" {% endif %} class="wsite-menu-item-wrap">
-							<a href="about-us.html" class="wsite-menu-item">
+						<li  {% if page.url == "/about-us" %} id="active" {% endif %} class="wsite-menu-item-wrap">
+							<a href="/about-us" class="wsite-menu-item">
 								About Us
 							</a>
 						</li>
 						
-						<li {% if page.url == "/events.html" %} id="active" {% endif %} class="wsite-menu-item-wrap">
-							<a href="events.html" class="wsite-menu-item">
+						<li {% if page.url == "/events" %} id="active" {% endif %} class="wsite-menu-item-wrap">
+							<a href="/events" class="wsite-menu-item">
 								Meetings & Events
 							</a>
 						</li>
-						<li {% if page.url == "/photos.html" %} id="active" {% endif %} class="wsite-menu-item-wrap">
-							<a href="photos.html" class="wsite-menu-item">
+						<li {% if page.url == "/photos" %} id="active" {% endif %} class="wsite-menu-item-wrap">
+							<a href="/photos" class="wsite-menu-item">
 								Photos
 							</a>
 						</li>
-						<li {% if page.url == "/officer-application.html" %} id="active" {% endif %} class="wsite-menu-item-wrap">
-							<a href="officer-application.html" class="wsite-menu-item">
-								Officer Application
-							</a>
-						</li>
-						<li {% if page.url == "/community-involvement.html" %} id="active" {% endif %} class="wsite-menu-item-wrap">
-							<a href="community-involvement.html" class="wsite-menu-item">
-								Community Involvement
-							</a>
-						</li>
-						<li {% if page.url == "/contact.html" %} id="active" {% endif %} class="wsite-menu-item-wrap">
-							<a href="contact.html" class="wsite-menu-item">
+						<li {% if page.url == "/contact" %} id="active" {% endif %} class="wsite-menu-item-wrap">
+							<a href="/contact" class="wsite-menu-item">
 								Contact
 							</a>
 						</li>
