Added mailing list

--- a/_layouts/addedCSS.html
+++ b/_layouts/addedCSS.html
@@ -102,6 +102,11 @@
 								Photos
 							</a>
 						</li>
+						<li {% if page.url == "/mailing-list" %} id="active" {% endif %} class="wsite-menu-item-wrap">
+							<a href="/mailing-list" class="wsite-menu-item">
+								Mailing List
+							</a>
+						</li>
 						<li {% if page.url == "/contact" %} id="active" {% endif %} class="wsite-menu-item-wrap">
 							<a href="/contact" class="wsite-menu-item">
 								Contact
