Updated disclaimer text

--- a/_layouts/addedCSS.html
+++ b/_layouts/addedCSS.html
@@ -143,8 +143,8 @@
 				</div>
 				<div style="clear:both"></div>
 				<div class="copyright" style="text-align:center;">
-					<h5>The ASH Website is published by Atheists, Skeptics, and Humanists at UT Dallas, a registered student
-					organization. The ASH Website is not an official publication of UT Dallas and does not represent the views of the
+					<h5>This website is published by Atheists, Skeptics, and Humanists at UT Dallas, a registered student
+					organization. This website is not an official publication of UT Dallas and does not represent the views of the
 					university or its officers. The University of Texas at Dallas is an Equal Opportunity/Affirmative Action University. </h5>
 				</div>
 				
