--- a/_layouts/addedCSS.html
+++ b/_layouts/addedCSS.html
@@ -83,7 +83,7 @@
 			<div id="page">
 				<div id="topnav">
 					<a href="/" class="wsite-menu-item">
-								<img id="nav-icon" src="uploads/nav-icon.png" alt="ASH - Atheists Skeptics And Humanists"/>
+								<img id="nav-icon" src="/assets/images/nav-icon.png" alt="ASH - Atheists Skeptics And Humanists"/>
 					</a>
 					<ul class="nav-links">
 						<li  {% if page.url == "/about-us" %} id="active" {% endif %} class="wsite-menu-item-wrap">
@@ -122,7 +122,7 @@
 			
 			<div id="footer">
 			<div class="footer-icon">
-				<img src="uploads/UTD-ASH.jpg" alt="ASH" style="width:17vw; height:auto;margin-bottom: 2em;margin-right: 7vw;"/>
+				<img src="/assets/images/UTD-ASH.jpg" alt="ASH" style="width:17vw; height:auto;margin-bottom: 2em;margin-right: 7vw;"/>
 			</div>
 				
 				<div class="affiliates-icons">
@@ -130,13 +130,13 @@
 						 <div class="affiliate-images">
 							<a href='https://www.secularstudents.org/'>
 								<div class="img-target">
-									<img src="uploads/269331548.png" alt="Secular Students Alliance" style="width:15vw; height:auto" />
+									<img src="/assets/images/269331548.png" alt="Secular Students Alliance" style="width:15vw; height:auto" />
 								</div>
 							</a>
 					
 							<a href='https://www.centerforinquiry.net/'>
 								<div class="img-target">
-									<img class="cfi-icon" src="uploads/CFI-icon.png" alt="Center For Inquiry" style="width:15vw; height:auto;" />
+									<img class="cfi-icon" src="/assets/images/CFI-icon.png" alt="Center For Inquiry" style="width:15vw; height:auto;" />
 								</div>
 							</a>
 						</div>
