Renamed addedCSS.html layout to default.html because it's the only one being used.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,20 +15,17 @@
 		
 		<link rel="stylesheet" type="text/css" href="assets/css/editmysite.com.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/fancybox.css">
+		<link rel="stylesheet" href="assets/css/simplelightbox.min.css" type="text/css">
 		<link rel="stylesheet" type="text/css" href="assets/css/main_style.css" title="wsite-theme-css" />
 		<link href='https://fonts.googleapis.com/css?family=Play:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 
 		<style type='text/css'>
-			.wsite-header {
-				background-image: url(uploads/header_images/headerHD.png) !important;
-				background-position: 0 0 !important;
-			}
-
+		
 			.event {
 				display: block;
 				margin: 4pt auto;
 				width: 75%;
-				border: solid black 2px;
+				border: solid #1f98c0 2px;
 				padding: 6pt;
 				text-align: left;
 				overflow: auto;
@@ -67,6 +64,9 @@
 			.eventDescription {
 				color: lightgray !important;
 			}
+			#nav-wrap { border-bottom: 4px solid #a11518 !important; }
+			#content { float: none !important;}
+			#footer { border-top: 4px solid #a11518 !important; }
 		</style>
 
 		{% if page.scripts %}
@@ -82,7 +82,7 @@
 			<div id="page">
 				<div id="topnav">
 					<a href="/" class="wsite-menu-item">
-								<img id="nav-icon" src="uploads/nav-icon.png" alt="ASH - Atheists Skeptics And Humanists"/>
+								<img id="nav-icon" src="/assets/images/nav-icon.png" alt="ASH - Atheists Skeptics And Humanists"/>
 					</a>
 					<ul class="nav-links">
 						<li  {% if page.url == "/about-us" %} id="active" {% endif %} class="wsite-menu-item-wrap">
@@ -101,6 +101,11 @@
 								Photos
 							</a>
 						</li>
+						<li {% if page.url == "/mailing-list" %} id="active" {% endif %} class="wsite-menu-item-wrap">
+							<a href="/mailing-list" class="wsite-menu-item">
+								Mailing List
+							</a>
+						</li>
 						<li {% if page.url == "/contact" %} id="active" {% endif %} class="wsite-menu-item-wrap">
 							<a href="/contact" class="wsite-menu-item">
 								Contact
@@ -116,7 +121,7 @@
 			
 			<div id="footer">
 			<div class="footer-icon">
-				<img src="uploads/UTD-ASH.jpg" alt="ASH" style="width:17vw; height:auto;margin-bottom: 2em;margin-right: 7vw;"/>
+				<img src="/assets/images/UTD-ASH.jpg" alt="ASH" style="width:17vw; height:auto;margin-bottom: 2em;margin-right: 7vw;"/>
 			</div>
 				
 				<div class="affiliates-icons">
@@ -124,26 +129,32 @@
 						 <div class="affiliate-images">
 							<a href='https://www.secularstudents.org/'>
 								<div class="img-target">
-									<img src="uploads/269331548.png" alt="Secular Students Alliance" style="width:15vw; height:auto" />
+									<img src="/assets/images/269331548.png" alt="Secular Students Alliance" style="width:15vw; height:auto" />
 								</div>
 							</a>
 					
 							<a href='https://www.centerforinquiry.net/'>
 								<div class="img-target">
-									<img class="cfi-icon" src="uploads/CFI-icon.png" alt="Center For Inquiry" style="width:15vw; height:auto;" />
+									<img class="cfi-icon" src="/assets/images/CFI-icon.png" alt="Center For Inquiry" style="width:15vw; height:auto;" />
 								</div>
 							</a>
 						</div>
 				</div>
 				<div style="clear:both"></div>
 				<div class="copyright" style="text-align:center;">
-					<h5>The ASH Website is published by Atheists, Skeptics, and Humanists at UT Dallas, a registered student
-					organization. The ASH Website is not an official publication of UT Dallas and does not represent the views of the
+					<h5>This website is published by Atheists, Skeptics, and Humanists at UT Dallas, a registered student
+					organization. This website is not an official publication of UT Dallas and does not represent the views of the
 					university or its officers. The University of Texas at Dallas is an Equal Opportunity/Affirmative Action University. </h5>
 				</div>
-			
+				
 				<p style="text-align:center"><a href="https://github.com/utdash/ASH-Website">Domain maintained by <strong>Joshua Baker</strong></a> | Website designed by <a href="https://www.linkedin.com/in/priscilla-arinze/"><strong>Priscilla Arinze</strong></a></p>
 				
 			</div>
+			<script>
+				$(document).ready(function() {
+					$('.gallery a').simpleLightbox();
+				});
+			</script>
 	</body>
+
 </html>
