--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -147,7 +147,7 @@
 					university or its officers. The University of Texas at Dallas is an Equal Opportunity/Affirmative Action University. </h5>
 				</div>
 				
-				<p style="text-align:center"><a href="https://github.com/utdash/ASH-Website">Domain maintained by <strong>Joshua Baker</strong></a> | Website designed by <a href="https://www.linkedin.com/in/priscilla-arinze/"><strong>Priscilla Arinze</strong></a></p>
+                <p style="text-align:center">Website designed by <a href="https://www.linkedin.com/in/priscilla-arinze/"><strong>Priscilla Arinze</strong></a> | <a href="https://github.com/utdash/ASH-Website">Visit the code repository</a></p>
 				
 			</div>
 			<script>
